compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___invalid_call_is_number.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\nuse <- 123\n123\n"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:2:8
  │
2 │ use <- 123
  │        ^^^

In a use expression, there should be a function on the right hand side of
`<-`, but this value has type:

    Int

See: https://tour.rakun.run/advanced-features/use/
